# coworld-tools

./: .gitleaks.toml  IMPORTED_REPOS.md  README.md
games/: .gitignore  AGENTS.md  README.md  pyproject.toml
games/docs/: COWORLD_REFERENCE.md  GAME_DESIGN.md  inventory.md  migration-plan.md
games/games/amongcogs/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  coworld_manifest.json  pyproject.toml
games/games/bombercog/: README.md  pyproject.toml
games/games/coghouse/: AGENTS.md  README.md  pyproject.toml
games/games/cogisis/: .gitignore  AGENTS.md  README.md  RULES.md  pyproject.toml
games/games/cogony/: .gitignore  AGENTS.md  README.md  RULES.md  pyproject.toml
games/games/cogs_vs_clips/: README.md  coworld_manifest.json
games/games/cogsguard/: .gitignore  README.md  pyproject.toml
games/games/cogshambo/: .gitignore  AGENTS.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
games/games/cogwars/: AGENTS.md  README.md  pyproject.toml
games/games/diplomacog/: .gitignore  AGENTS.md  Dockerfile  README.md  coworld_manifest.json  install.sh  pyproject.toml  rules.md
games/games/euchre/: AGENTS.md  LICENSE  README.md  pyproject.toml
games/games/hungercog/: .gitignore  AGENTS.md  Dockerfile  README.md  coworld_manifest.json  install.sh  pyproject.toml
games/games/liarliar/: .dockerignore  .gitignore  Dockerfile  README.md  coworld_manifest.json  package.json
games/games/memory/: AGENTS.md  README.md  pyproject.toml
games/games/overcogged/: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  coworld_manifest.json  install.sh  pyproject.toml
games/games/paintarena/: Dockerfile  README.md  coworld_manifest.json
games/games/persephones_escape/: .gitignore  GUIDE.md  README.md  RULES.md  coworld_manifest.json  learnings.md  package-lock.json  package.json  replay.ts  server.ts  tsconfig.json
games/games/tag/: AGENTS.md  README.md  pyproject.toml
games/games/tribalcog/: Dockerfile  MANIFEST.in  README.md  coworld_manifest.json  pyproject.toml  tribal_village.nim  tribal_village.nimble
games/games/werecog/: .gitignore  AGENTS.md  Dockerfile  README.md  coworld_manifest.json  install.sh  pyproject.toml
games/templates/mettagrid-python/: AGENTS.md  README.md  pyproject.toml
players/: .gitignore  .gitmodules  AGENTS.md  COGAMES.md  COGAMES_CLI.md  MANIFEST.in  MISSION.md  README.co-gas.md  README.md  nim_build_support.py  pyproject.toml  setup.py  setup_script.py  trained_setup_script.py
players/among_them/: .dockerignore  README.md
players/among_them/common/: README.md
players/among_them/guided_bot/: .gitignore  DESIGN.md  FIX_PLAN.md  FLEEING_DESIGN.md  HUNTING_DESIGN.md  IDLE_DESIGN.md  IMPL_PLAN.md  IMPOSTER_CRITIQUE.md  MEETING_DESIGN.md  NAVIGATION_DESIGN.md  NAVIGATION_FIX.md  PHASE2_HANDOFF.md  PHASE3_HANDOFF.md  PHASE4_HANDOFF.md  PHASE5_HANDOFF.md  PRETENDING_DESIGN.md  README.md  REPORTING_DESIGN.md  TASK_COMPLETING_DESIGN.md  TODO.md  action.nim  belief.nim  bot.nim  build_guided_bot.py  constants.nim  guidance.nim  guided_bot.nim  llm.nim  mode_registry.nim  navigation.nim  nim.cfg  perception.nim  prompts.nim  reflex.nim  snapshot.nim  trace.nim  tuning.nim  types.nim
players/among_them/modulabot/: CREWMATE_TASK_FIX_PLAN.md  PERCEPTION_PERF_PLAN.md  README.md  actions.py  actors.py  chat.py  diag.py  frame.py  localize.py  path.py  policy.py  state.py  trace.py  tuning.py  voting.py
players/among_them/scripts/: _lib.py  bench_perception.py  capture.py  capture_frames.py  connect.py  debug_overlay.py  play_debug.py  play_debug.sh  play_eight.sh  play_live.py  play_local.py  play_match.py  play_watch.py  server.py
players/among_them/tools/: dump_tiny5_font.nim
players/archive/: README.md
players/coborg_framework/: PYTHON_FRAMEWORK.md  SOURCE_REPOS.md
players/coborg_framework/examples/: toy_grid_agent.py
players/docs/: 0018-tribal-village-temple-roles.md  CYBORG_POLICIES_REPORT.md  README.md  aligned_junction_held_investigation.md  artifact_pipeline.md  aws-sso-on-mettabox.md  beta-cvc-policy-validation.md  cogas-agent-design.md  coworld-integration-guide.md  coworld-player-packaging.md  coworld-player-swap.md  leaderboard-submission-process.md  machina1-agent-analysis.md  nim-vs-python-agents-comparison.md  policy-catalog.md  role-distribution-analysis.md  role-vs-role-nim-parity-findings-2026-02-22.md  scripted-baselines-howto.md  source-provenance.md  training-and-submission-guide.md  wandb-analysis-cogsguard-training.md
players/docs/audits/: 2026-05-12-structure-cleanliness.md
players/docs/designs/: eyes_v1_deprecation.md  guide_v1_design.md
players/docs/experiments/: cogamer-aor-guide.md
players/docs/findings/: baseline-policy-recipe-discovery.md
players/docs/migrations/: metta-cogames-agents.md
players/infinite_blocks/: Dockerfile  README.md  coplayer_manifest.json
players/infinite_blocks/pystack/: Dockerfile  README.md  coplayer_manifest.json  pystack.py
players/infinite_blocks/stacker/: README.md  stacker.py
players/infinite_blocks/tests/: test_stacker.py
players/persephone/: GAME_API.md  README.md  RULEBOOK.md  TODO.md  run_agents.py
players/persephone/docs/: DESIGN_perception.md  DESIGN_run_agents.md
players/players/: README.md  __init__.py
players/policies/: README.md
players/scripts/: eval_cogas.sh  quick_eval.sh  regression_check.py  run_cogsguard_parity.py  run_cogsguard_rollout.py  tune_cogas.sh
players/tests/: test_cogsguard_action_timing.py  test_cogsguard_guardrails.py  test_cogsguard_parity_script.py  test_cogsguard_role_contracts.py  test_cyborg_framework.py  test_evolution.py  test_evolutionary_coordinator.py  test_nlanky_behaviors.py  test_observation_shape_compat.py  test_prereq_trace.py  test_role_trace.py  test_rollout_trace.py  test_scripted_agent_helpers.py  test_scripted_agent_type_tags.py  test_scripted_baselines_report.py  test_scripted_registry.py
players/tools/: README.md
players/tutorials/: cogsguard_make_policy.ipynb
players/users/: README.md
(+3220 files in other folders)
