[project]
name = "metta-games"
version = "0.1.0"
description = "Consolidated game definitions and runtime packages for Metta-AI Coworld-style environments."
requires-python = ">=3.12,<3.13"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "games/amongcogs",
  "games/bombercog",
  "games/cogisis",
  "games/cogony",
  "games/diplomacog",
  "games/euchre",
  "games/hungercog",
  "games/overcogged",
  "games/tribalcog",
  "games/werecog",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.12",
]
