[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-policies"
version = "0.1.0"
description = "Importable agent frameworks and policies for CoGames and BitWorld projects"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Metta AI" }]
dependencies = [
  "numpy>=2.0.0",
  "pydantic>=2.12.2",
]

[project.optional-dependencies]
cogames = ["cogames", "mettagrid"]
test = ["pytest", "pytest-xdist", "ruff"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "agent_policies",
  "agent_policies.*",
]

[tool.setuptools.package-data]
agent_policies = [
  "**/*.html",
  "**/*.json",
  "**/*.lock",
  "**/*.map",
  "**/*.md",
  "**/*.nim",
  "**/*.nims",
  "**/*.txt",
  "**/.nim-version",
  "**/.nimby-version",
]
