[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cogame-coghouse"
version = "0.1.0"
description = "Coghouse game package imported from cogame-coghouse"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Metta-AI" },
]
keywords = ["mettagrid", "cogames", "multi-agent", "reinforcement-learning", "template"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mettagrid",
    "pydantic>=2",
    "typer>=0.12",
    "typing-extensions>=4.9",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[project.scripts]
coghouse-play = "cogame.cli:cli"

[project.urls]
Homepage = "https://github.com/Metta-AI/cogame-coghouse"
Repository = "https://github.com/Metta-AI/cogame-coghouse"

[tool.uv.sources]
mettagrid = { git = "https://github.com/Metta-AI/mettagrid.git" }

[tool.hatch.build.targets.wheel]
packages = ["src/cogame"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/skills",
    "/README.md",
    "/AGENTS.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# typer.Option(...) in argument defaults is the standard typer idiom.
"src/cogame/cli.py" = ["B008"]
