[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cogisis"
version = "0.1.0"
description = "Cogisis: a Nemesis-style cogame with a first-party Python engine"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Metta-AI" },
]
keywords = ["cogame", "multi-agent", "simulation", "reinforcement-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[project.scripts]
cogisis = "cogisis.cli:cli"

[project.urls]
Homepage = "https://github.com/Metta-AI/cogame-cogisis"
Repository = "https://github.com/Metta-AI/cogame-cogisis"

[tool.hatch.build.targets.wheel]
packages = ["src/cogisis"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/AGENTS.md",
    "/RULES.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
