[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "diplomacog"
version = "0.1.0"
description = "Standalone Diplomacog game package"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
authors = [{ name = "Metta-AI" }]
keywords = ["mettagrid", "cogames", "multi-agent", "reinforcement-learning", "diplomacy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "websockets>=15.0.0",
  "uvicorn[standard]>=0.34.0",
  "fastapi>=0.115.0",
  "mettagrid",
  "numpy>=2.0.0,<3",
  "pydantic>=2.11.5",
  "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.12.0"]
test = ["pytest>=8.0", "ruff>=0.12.0"]

[project.urls]
Homepage = "https://github.com/Metta-AI/coworld-diplomacog"
Repository = "https://github.com/Metta-AI/coworld-diplomacog.git"
Template = "https://github.com/Metta-AI/cogame"

[tool.setuptools.packages.find]
where = ["src"]
include = ["diplomacog", "diplomacog.*"]

[tool.setuptools.package-data]
diplomacog = ["coworld/clients/*", "coworld/docs/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
