[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "hungercog"
version = "0.1.0"
description = "Standalone HungerCog game built on mettagrid"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Metta AI", email = "info@metta.ai" }]
requires-python = ">=3.11,<3.13"
dependencies = [
  "websockets>=15.0.0",
  "uvicorn[standard]>=0.34.0",
  "fastapi>=0.115.0",
  "mettagrid",
  "pydantic>=2.11.5",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[project.urls]
Homepage = "https://github.com/Metta-AI/coworld-hungercog"
Repository = "https://github.com/Metta-AI/coworld-hungercog.git"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["hungercog", "hungercog.*"]

[tool.setuptools.package-data]
hungercog = ["rules.md", "coworld/clients/*", "coworld/docs/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
