[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "werecog"
version = "0.1.0"
description = "Standalone Werecog social-deduction game package"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Metta AI", email = "info@metta.ai" }]
requires-python = ">=3.11,<3.13"
dependencies = [
  "cogames",
  "mettagrid",
  "pydantic>=2.11.5",
]

[project.optional-dependencies]
dev = [
  "pillow>=11.0.0",
  "pytest>=8.0.0",
  "ruff>=0.9.0",
]

[project.scripts]
werecog = "werecog.main:main"

[project.urls]
Homepage = "https://github.com/Metta-AI/cogame-werecog"
Repository = "https://github.com/Metta-AI/cogame-werecog.git"

[tool.setuptools.packages.find]
where = ["src"]
include = ["werecog", "werecog.*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
werecog = ["py.typed", "assets/**/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
