[project]
name = "cogbase"
version = "0.1.0"
description = "Tools and skills for faster development of base agents for cogames"
readme = "README.md"
authors = [
    { name = "James Boggs", email = "james@softmax.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.0",
    "websockets>=16.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aiohttp>=3.13.5",
    "hypothesis>=6.152.4",
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
