[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogony-policy"
version = "0.1.0"
description = "Baseline Cogony policy"
requires-python = ">=3.12"
dependencies = [
  "mettagrid",
  "cogames",
]

[project.optional-dependencies]
llm = ["anthropic>=0.64.0"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["cogony_policy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 3
