[project]
name = "cogora"
version = "0.1.0"
description = "Observatory tournament API as MCP tools"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
cogora-server = "cogora.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
