[project]
name = "among-them-coworld"
version = "0.1.0"
description = "Coworld-only runtime workspace for the Among Them guided_bot policy."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "coworld[auth]",
    "mettagrid==0.26.17",
    "numpy",
    "pydantic",
    "websockets==16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
coworld = { path = "/Users/jamesboggs/coding/metta/packages/coworld", editable = true }
