[project]
name = "among-them-sdk"
version = "0.1.0"
description = "Python SDK for authoring Among Them policy bots — wraps evidencebot_v2 via FFI and exposes module-level overrides plus natural-language instructions."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Among Them SDK contributors" }]
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.7",
    "anyio>=4.4",
    "structlog>=24.1",
    "httpx>=0.27",
    "numpy>=1.26",
    "websockets>=13",
    "tomli>=2.0; python_version < '3.11'",
    # Bedrock is the SDK's default LLM provider (see cognition/llm.py).
    # `anthropic[bedrock]` pulls in boto3, which talks to AWS Bedrock.
    "anthropic[bedrock]>=0.40",
    "boto3>=1.34",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]
all = ["openai>=1.40"]

[project.entry-points."among_them.profiles"]
default = "among_them_sdk.policy.evidencebot_v2:DefaultProfile"
evidencebot_v2 = "among_them_sdk.policy.evidencebot_v2:DefaultProfile"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/among_them_sdk"]

# Ship the vendored prebuilt evidencebot_v2 native library inside the wheel
# so users don't need the upstream bitworld monorepo to import the SDK.
# The Nim source under vendor/nim_source/ is intentionally excluded — it is
# kept in the repo for inspection but cannot be rebuilt without the bitworld
# monorepo's common/, src/, and nimby.lock (see vendor/README.md).
[tool.hatch.build.targets.wheel.force-include]
"vendor/native/libevidencebot_v2.dylib" = "among_them_sdk/_vendor/native/libevidencebot_v2.dylib"
"vendor/native/libevidencebot_v2.dylib.abi" = "among_them_sdk/_vendor/native/libevidencebot_v2.dylib.abi"
"vendor/README.md" = "among_them_sdk/_vendor/README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501", "N803", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
